[gd_scene load_steps=2 format=3 uid="uid://dsp37j5dpi64f"]

[ext_resource type="Script" uid="uid://bva5e2gincuqf" path="res://ui/menu.gd" id="1_lti8b"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_lti8b")

[node name="Button" type="Button" parent="."]
offset_left = 449.0
offset_top = 64.0
offset_right = 676.0
offset_bottom = 227.0
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="Button2" type="Button" parent="."]
offset_left = 449.0
offset_top = 286.0
offset_right = 676.0
offset_bottom = 449.0
theme_override_font_sizes/font_size = 50
text = "QUIT"

[node name="Button3" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "click"

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="Button3" to="." method="_on_button_3_button_down"]
